--- a/.project
+++ b/.project
@@ -33,6 +33,26 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>lib/display.c</name>
+			<type>1</type>
+			<location>/home/hmr/STM32CubeIDE/workspace_1.2.0/Flappy/libemb/display/display.c</location>
+		</link>
+		<link>
+			<name>lib/font.c</name>
+			<type>1</type>
+			<location>/home/hmr/STM32CubeIDE/workspace_1.2.0/Flappy/libemb/display/font.c</location>
+		</link>
+		<link>
+			<name>lib/lcd.c</name>
+			<type>1</type>
+			<location>/home/hmr/STM32CubeIDE/workspace_1.2.0/Flappy/libemb/display/lcd.c</location>
+		</link>
+		<link>
+			<name>lib/st7735.c</name>
+			<type>1</type>
+			<location>/home/hmr/STM32CubeIDE/workspace_1.2.0/Flappy/libemb/drv/tft/st7735.c</location>
+		</link>
+		<link>
 			<name>Drivers/STM32L4xx_HAL_Driver/stm32l4xx_hal.c</name>
 			<type>1</type>
 			<locationURI>$%7BPARENT-3-PROJECT_LOC%7D/STM32Cube/Repository/STM32Cube_FW_L4_V1.15.1/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal.c</locationURI>
